--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dikasetiadi.github.io/ToDoList",
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "gh-pages": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "react-addons-css-transition-group": "^15.6.2",
